--- a/burgundy-without-table.html
+++ b/burgundy-without-table.html
@@ -123,7 +123,7 @@
 
                                            <!--SPACER--><div>&nbsp;</div><!--SPACER-->
 
-                                           <div>Headline here up to three lines of text maximum.</div>
+                                           <div>You're Invited! Financial Analytics Open House at Oracle's Reston Cloud Solution Hub</div>
 
                                         </td>
                                       </tr>
@@ -193,7 +193,7 @@
                                              <tbody>
                                                 <!--Start Headline-->
                                                 <tr>
-                                                   <td class="cb-h1" align="left" valign="top" style="font-family:Arial, Helvetica, sans-serif; font-size:25px; color:#4e5052;line-height:120%; padding-bottom:20px;">Subheadline here
+                                                   <td class="cb-h1" align="left" valign="top" style="font-family:Arial, Helvetica, sans-serif; font-size:25px; color:#4e5052;line-height:120%; padding-bottom:20px;">Join Us: Oracle Financial Analytics Open House
                                                    </td>
                                                 </tr>
                                                 <!--End Headline-->
@@ -210,11 +210,11 @@
                                                                         <tr>
                                                                            <td class="cb-h3" align="left" style="font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#4e5052; word-break:break-word; text-align:left; padding-bottom:20px; line-height:140%">
 
-                                                                              <div style="padding-bottom:20px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                                                                              <div style="padding-bottom:20px;">Inspire your team with effective and efficient financial reporting and learn how the Reston Hub can help your company integrate to the next generation of cloud services</div>
 
-                                                                              <div style="padding-bottom:20px;">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </div>
+                                                                              <div style="padding-bottom:20px;">We are hosting an open house on Wednesday, November 7th to demonstrate how casual analytics and power users alike can enrich their experience through discovery and collabortion. This is a great opporunity to get to know Reston Hubsters, take a deep dive into our solutions, and discuss potential business use cases with our team. </div>
 
-                                                                              <div>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </div>                                                             
+                                                                              <div>Don't wait! Register today - we look forward to seeing you soon! </div>                                                             
                                                                            </td>
                                                                         </tr>
                                                                      </tbody>
@@ -228,11 +228,11 @@
 
                                                                               <div style="font-weight:bold; color:#942645; font-size:16px; padding-bottom:5px;">Event Details</div>
 
-                                                                              <div class="cb-h3" align="left"><strong>Date:</strong>&nbsp;March 8, 2018</div>
+                                                                              <div class="cb-h3" align="left"><strong>Date:</strong>&nbsp;Wednesday, November 7, 2018</div>
 
-                                                                              <div class="cb-h3" align="left"><strong>Time:</strong>&nbsp;12pm &#45; 1pm</div>
+                                                                              <div class="cb-h3" align="left"><strong>Time:</strong>&nbsp;2:30 PM - 6:30 PM</div>
 
-                                                                              <div class="cb-h3" align="left"><strong>Location:</strong>&nbsp;Lorem ipsum dolor</div>
+                                                                              <div class="cb-h3" align="left"><strong>Location:</strong>1910 BLDG, 5th Floor</div>
 
                                                                            </td>
                                                                         </tr>
@@ -244,11 +244,11 @@
 
                                                                               <div style="font-weight:bold; color:#942645; font-size:16px; padding-bottom:5px;">Additional Info</div>
 
-                                                                              <div class="cb-h3" align="left">Lorem ipsum dolor sit amet, consectetur adipisicing</div>
+                                                                              <div class="cb-h3" align="left">Demonstrations and Hubster Q&A will take place from 2:30 PM - 5:00 PM with Happy Hour to follow. </div>
 
                                                                               <!--SPACER--><div>&nbsp;</div><!--SPACER-->
 
-                                                                              <div class="cb-h3" align="left"><strong>Phone Number:<br></strong>706.758.3074</div>
+                                                                              <div class="cb-h3" align="left"><strong>Phone Number:<br></strong>352.422.0774</div>
 
                                                                               <!--SPACER--><div>&nbsp;</div><!--SPACER-->
 
@@ -289,7 +289,7 @@
                                           <table width="100%" cellspacing="0" cellpadding="30" class="devicewidthinner" bgcolor="#ffffff" style="border-top-width: 5px; border-top-style: solid; border-top-color: #942645; border-right-width: 1px; border-right-style: solid; border-right-color: #cccccc; border-left-width: 1px; border-left-style: solid; border-left-color: #cccccc;  border-bottom-width: 1px; border-bottom-style: solid; border-bottom-color: #cccccc;">
                                              <tbody>
                                                 <tr>
-                                                   <td valign="top" align="left" style="font-family:Arial, Helvetica, sans-serif; font-size:18px; color:#4e5052;line-height:120%; font-weight:bold; padding-bottom:0;" class="cb-h2"><span class="tmpTitle">Have questions?</span>
+                                                   <td valign="top" align="left" style="font-family:Arial, Helvetica, sans-serif; font-size:18px; color:#4e5052;line-height:120%; font-weight:bold; padding-bottom:0;" class="cb-h2"><span class="tmpTitle">We Hope To See You Soon!</span>
                                                    </td>
                                                 </tr>
                                                 <tr class="row">
@@ -298,11 +298,11 @@
                                                          <tbody>
                                                             <tr>
                                                                <td class="cb-h3 col3-sec" valign="top" align="left" style="font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#4e5052; line-height:130%;">
-                                                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                                                                Have questions? Ready to learn more? Please reach out to Hub Program Lead Emily Huegel for addtional details related to this event. 
                                                                   <br />
                                                                   <br />
                                                                   <!--Put email address in href=""-->
-                                                                  <a href="mailto:john.smith@oracle.com" class="cb-h3" style="font-family:Arial, Helvetica, sans-serif; color:#00758f;text-decoration:underline;">Please feel free to send us your questions.</a><br />
+                                                                  <a href="mailto:emily.huegel@oracle.com" class="cb-h3" style="font-family:Arial, Helvetica, sans-serif; color:#00758f;text-decoration:underline;">Please feel free to send us your questions.</a><br />
                                                               
                                                                </td>
                                                             </tr>
