--- a/burgundy-without-table.html
+++ b/burgundy-without-table.html
@@ -141,8 +141,8 @@
                                                           <tr>
                                                             <td align="center" bgcolor="#9e0743">
 
-                                                              <!--Put destiation URL in href=""-->
-                                                              <a href="yourlinkhere" target="_blank" style="font-size: 18px; font-family: Arial, sans-serif; color: #ffffff; text-decoration: none; text-decoration: none; padding-top:12px; padding-bottom:12px; padding-left: 34px; padding-right:34px; border: 2px solid #ffffff; display: inline-block;">Register</a>
+                                                              <!--Put destiation URL in href="https://goo.gl/forms/jQoioh13tjDEftnr2"-->
+                                                              <a href="https://goo.gl/forms/jQoioh13tjDEftnr2" target="_blank" style="font-size: 18px; font-family: Arial, sans-serif; color: #ffffff; text-decoration: none; text-decoration: none; padding-top:12px; padding-bottom:12px; padding-left: 34px; padding-right:34px; border: 2px solid #ffffff; display: inline-block;">Register</a>
 
                                                             </td>
                                                           </tr>
@@ -212,7 +212,9 @@
 
                                                                               <div style="padding-bottom:20px;">Inspire your team with effective and efficient financial reporting and learn how the Reston Hub can help your company integrate to the next generation of cloud services</div>
 
-                                                                              <div style="padding-bottom:20px;">We are hosting an open house on Wednesday, November 7th to demonstrate how casual analytics and power users alike can enrich their experience through discovery and collabortion. This is a great opporunity to get to know Reston Hubsters, take a deep dive into our solutions, and discuss potential business use cases with our team. </div>
+                                                                              <div style="padding-bottom:20px;">We are hosting an open house on Wednesday, November 7th to showcase how analytics are becoming pervasive across all business functions and from the C-Suite to Executives to Management and Analysts.</div>
+                                                                              
+                                                                              <div style="padding-bottom:20px;">Come see how Oracle is changing the Analytics landscape and driving innovation with autonomous Analytics, machine learning, big data and Artificial intelligence.. This is a great opporunity to get to know Reston Hubsters, take a deep dive into our solutions, and discuss potential business use cases with our team. </div>
 
                                                                               <div>Don't wait! Register today - we look forward to seeing you soon! </div>                                                             
                                                                            </td>
@@ -252,8 +254,8 @@
 
                                                                               <!--SPACER--><div>&nbsp;</div><!--SPACER-->
 
-                                                                             <!--Put destination URL in href=""-->
-                                                                              <div class="cb-h3" align="left"><a href="https://www.oracle.com/index.html" class="cb-h3" style="font-family:Arial, Helvetica, sans-serif; color:#00758f;text-decoration:underline;">Register Today</a><br /></div>
+                                                                             <!--Put destination URL in href="https://goo.gl/forms/jQoioh13tjDEftnr2"-->
+                                                                              <div class="cb-h3" align="left"><a href="https://goo.gl/forms/jQoioh13tjDEftnr2" class="cb-h3" style="font-family:Arial, Helvetica, sans-serif; color:#00758f;text-decoration:underline;">Register Today</a><br /></div>
 
                                                                            </td>
                                                                         </tr>
