--- a/burgundy-without-table.html
+++ b/burgundy-without-table.html
@@ -212,9 +212,9 @@
 
                                                                               <div style="padding-bottom:20px;">Inspire your team with effective and efficient financial reporting and learn how the Reston Hub can help your company integrate to the next generation of cloud services</div>
 
-                                                                              <div style="padding-bottom:20px;">We are hosting an open house on Wednesday, November 7th to showcase how analytics are becoming pervasive across all business functions and from the C-Suite to Executives to Management and Analysts.</div>
+                                                                              <div style="padding-bottom:20px;">We are hosting an open house on Wednesday, November 7th to showcase how analytics are becoming pervasive across all business functions and from the C-Suite to Executives to Management and Analysts. </div>
                                                                               
-                                                                              <div style="padding-bottom:20px;">Come see how Oracle is changing the Analytics landscape and driving innovation with autonomous Analytics, machine learning, big data and Artificial intelligence.. This is a great opporunity to get to know Reston Hubsters, take a deep dive into our solutions, and discuss potential business use cases with our team. </div>
+                                                                              <div style="padding-bottom:20px;">Come see how Oracle is changing the Analytics landscape and driving innovation with autonomous Analytics, machine learning, big data and Artificial intelligence. This is a great opporunity to get to know Reston Hubsters, take a deep dive into our solutions, and discuss potential business use cases with our team. </div>
 
                                                                               <div>Don't wait! Register today - we look forward to seeing you soon! </div>                                                             
                                                                            </td>
