--- a/burgundy-without-table.html
+++ b/burgundy-without-table.html
@@ -123,7 +123,7 @@
 
                                            <!--SPACER--><div>&nbsp;</div><!--SPACER-->
 
-                                           <div>You're Invited! Financial Analytics Open House at Oracle's Reston Cloud Solution Hub</div>
+                                           <div>You're Invited! Analytics Open House at Oracle's Reston Cloud Solution Hub</div>
 
                                         </td>
                                       </tr>
@@ -210,11 +210,11 @@
                                                                         <tr>
                                                                            <td class="cb-h3" align="left" style="font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#4e5052; word-break:break-word; text-align:left; padding-bottom:20px; line-height:140%">
 
-                                                                              <div style="padding-bottom:20px;">Inspire your team with effective and efficient financial reporting and learn how the Reston Hub can help your company integrate to the next generation of cloud services</div>
+                                                                              <div style="padding-bottom:20px;">Inspire your team with effective and efficient reporting and learn how the Reston Hub can help your company integrate to the next generation of cloud services</div>
 
-                                                                              <div style="padding-bottom:20px;">We are hosting an open house on Wednesday, November 7th to showcase how analytics are becoming pervasive across all business functions and from the C-Suite to Executives to Management and Analysts. </div>
+                                                                              <div style="padding-bottom:20px;">We are hosting an open house on Wednesday, November 7th to showcase how analytics are becoming pervasive across all business functions from the C-Suite to Executives to Management and Analysts. </div>
                                                                               
-                                                                              <div style="padding-bottom:20px;">Come see how Oracle is changing the Analytics landscape and driving innovation with autonomous Analytics, machine learning, big data and Artificial intelligence. This is a great opporunity to get to know Reston Hubsters, take a deep dive into our solutions, and discuss potential business use cases with our team. </div>
+                                                                              <div style="padding-bottom:20px;">Come see how Oracle is changing the Analytics landscape and driving innovation with autonomous Analytics, Machine Learning, Big Data and Artificial Intelligence. This is a great opporunity to get to know Reston Hubsters, take a deep dive into our solutions and discuss potential business use cases with our team. </div>
 
                                                                               <div>Don't wait! Register today - we look forward to seeing you soon! </div>                                                             
                                                                            </td>
@@ -300,7 +300,7 @@
                                                          <tbody>
                                                             <tr>
                                                                <td class="cb-h3 col3-sec" valign="top" align="left" style="font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#4e5052; line-height:130%;">
-                                                                Have questions? Ready to learn more? Please reach out to Hub Program Lead Emily Huegel for addtional details related to this event. 
+                                                                Have questions? Ready to learn more? Please reach out to Hub Program Lead Emily Huegel for additional details related to this event. 
                                                                   <br />
                                                                   <br />
                                                                   <!--Put email address in href=""-->
