--- a/burgundy-without-table.html
+++ b/burgundy-without-table.html
@@ -193,7 +193,7 @@
                                              <tbody>
                                                 <!--Start Headline-->
                                                 <tr>
-                                                   <td class="cb-h1" align="left" valign="top" style="font-family:Arial, Helvetica, sans-serif; font-size:25px; color:#4e5052;line-height:120%; padding-bottom:20px;">Join Us: Oracle Financial Analytics Open House
+                                                   <td class="cb-h1" align="left" valign="top" style="font-family:Arial, Helvetica, sans-serif; font-size:25px; color:#4e5052;line-height:120%; padding-bottom:20px;">Join Us: Oracle Analytics Open House
                                                    </td>
                                                 </tr>
                                                 <!--End Headline-->
