--- a/burgundy-without-table.html
+++ b/burgundy-without-table.html
@@ -210,7 +210,7 @@
                                                                         <tr>
                                                                            <td class="cb-h3" align="left" style="font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#4e5052; word-break:break-word; text-align:left; padding-bottom:20px; line-height:140%">
 
-                                                                              <div style="padding-bottom:20px;">Inspire your team with effective and efficient reporting and learn how the Reston Hub can help your company integrate to the next generation of cloud services</div>
+                                                                              <div style="padding-bottom:20px;">Inspire your team with effective and efficient reporting and learn how the Reston Hub can help your company integrate to the next generation of cloud services. </div>
 
                                                                               <div style="padding-bottom:20px;">We are hosting an open house on Wednesday, November 7th to showcase how analytics are becoming pervasive across all business functions from the C-Suite to Executives to Management and Analysts. </div>
                                                                               
