--- a/burgundy-without-table.html
+++ b/burgundy-without-table.html
@@ -85,7 +85,7 @@
                                      <td align="center" valign="middle" style="padding-top:0; padding-bottom:10px;">
                                         <table class="devicewidthinner" align="right" valign="middle" width="48%" cellspacing="0" cellpadding="0" border="0">
                                            <tr>
-                                              <td class="cb-left" align="center" style="font-family:Arial, Helvetica, sans serif; font-size:13px; font-weight:bold;color:#939699; text-align:right; padding-top:10px;padding-bottom:10px;">ORACLE CONFIDENTIAL – INTERNAL</td>
+                                              <td class="cb-left" align="center" style="font-family:Arial, Helvetica, sans serif; font-size:13px; font-weight:bold;color:#939699; text-align:right; padding-top:10px;padding-bottom:10px;"></td>
                                            </tr>
                                         </table>
                                         <!--Start Logo-->
@@ -214,7 +214,7 @@
 
                                                                               <div style="padding-bottom:20px;">We are hosting an open house on Wednesday, November 7th to showcase how analytics are becoming pervasive across all business functions from the C-Suite to Executives to Management and Analysts. </div>
                                                                               
-                                                                              <div style="padding-bottom:20px;">Come see how Oracle is changing the Analytics landscape and driving innovation with autonomous Analytics, Machine Learning, Big Data and Artificial Intelligence. This is a great opporunity to get to know Reston Hubsters, take a deep dive into our solutions and discuss potential business use cases with our team. </div>
+                                                                              <div style="padding-bottom:20px;">Come see how Oracle is changing the Analytics landscape and driving innovation with autonomous Analytics, Machine Learning, Big Data and Artificial Intelligence. This is a great opportunity to get to know Reston Hubsters, take a deep dive into our solutions and discuss potential business use cases with our team. </div>
 
                                                                               <div>Don't wait! Register today - we look forward to seeing you soon! </div>                                                             
                                                                            </td>
