--- a/burgundy-without-table.html
+++ b/burgundy-without-table.html
@@ -232,7 +232,7 @@
 
                                                                               <div class="cb-h3" align="left"><strong>Date:</strong>&nbsp;Wednesday, November 7, 2018</div>
 
-                                                                              <div class="cb-h3" align="left"><strong>Time:</strong>&nbsp;2:30 PM - 6:30 PM</div>
+                                                                              <div class="cb-h3" align="left"><strong>Time:</strong>&nbsp;2:30 PM - 7:00 PM</div>
 
                                                                               <div class="cb-h3" align="left"><strong>Location:</strong>1910 BLDG, 5th Floor</div>
 
@@ -246,7 +246,7 @@
 
                                                                               <div style="font-weight:bold; color:#942645; font-size:16px; padding-bottom:5px;">Additional Info</div>
 
-                                                                              <div class="cb-h3" align="left">Demonstrations and Hubster Q&A will take place from 2:30 PM - 5:00 PM with Happy Hour to follow. </div>
+                                                                              <div class="cb-h3" align="left">Demonstrations and Hubster Q&A will take place from 2:30 PM - 5:00 PM a with Happy Hour to follow at Jackson's in Reston Town Center. </div>
 
                                                                               <!--SPACER--><div>&nbsp;</div><!--SPACER-->
 
