--- a/ECALounge.html
+++ b/ECALounge.html
@@ -142,8 +142,7 @@
                                                             <td align="center" bgcolor="#9e0743">
 
                                                               <!--Put destiation URL in href="https://goo.gl/forms/jQoioh13tjDEftnr2"-->
-                                                              <a href="mailto:emily.huegel@oracle.com" class="cb-h3" style="font-family:Arial, Helvetica, sans-serif; color:#00758f;text-decoration:underline;">Register</a><br />
-                                                              
+                                                              <a href="mailto:emily.huegel@oracle.com" target="_blank" style="font-size: 18px; font-family: Arial, sans-serif; color: #ffffff; text-decoration: none; text-decoration: none; padding-top:12px; padding-bottom:12px; padding-left: 34px; padding-right:34px; border: 2px solid #ffffff; display: inline-block;">Register</a>
 
                                                             </td>
                                                           </tr>
