--- a/ECALounge.html
+++ b/ECALounge.html
@@ -123,7 +123,7 @@
 
                                            <!--SPACER--><div>&nbsp;</div><!--SPACER-->
 
-                                           <div>You're Invited! Analytics Open House at Oracle's Reston Cloud Solution Hub</div>
+                                           <div>You're Invited! Oracle Cloud Solution Hub ECA Lounge</div>
 
                                         </td>
                                       </tr>
@@ -193,7 +193,7 @@
                                              <tbody>
                                                 <!--Start Headline-->
                                                 <tr>
-                                                   <td class="cb-h1" align="left" valign="top" style="font-family:Arial, Helvetica, sans-serif; font-size:25px; color:#4e5052;line-height:120%; padding-bottom:20px;">Join Us: Oracle Analytics Open House
+                                                   <td class="cb-h1" align="left" valign="top" style="font-family:Arial, Helvetica, sans-serif; font-size:25px; color:#4e5052;line-height:120%; padding-bottom:20px;">Join Us: ECA Lounge at the Cloud Solution Hub
                                        </td>
                                                 </tr>
                                                 <!--End Headline-->
@@ -210,11 +210,11 @@
                                                                         <tr>
                                                                            <td class="cb-h3" align="left" style="font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#4e5052; word-break:break-word; text-align:left; padding-bottom:20px; line-height:140%">
 
-                                                                              <div style="padding-bottom:20px;">Inspire your team with effective and efficient reporting and learn how the Reston Hub can help your company integrate to the next generation of cloud services. </div>
+                                                                              <div style="padding-bottom:20px;">The Oracle Cloud Solution Hub would like to invite you to experience our new ECA Lounge. This dedicated space is designed to foster deeper collaboration between our team of Hubsters and ECAs. </div>
 
-                                                                              <div style="padding-bottom:20px;">We are hosting an open house on Wednesday, November 7th to showcase how analytics are becoming pervasive across all business functions from the C-Suite to Executives to Management and Analysts. </div>
+                                                                              <div style="padding-bottom:20px;">Please join us for our first collaborative experience event on [DATE TBA]. Guest will have the chance to meet our Hubsters, see live demonstrations of our Hub solutions and share your experiences on what is happening in the field with your customers. </div>
                                                                               
-                                                                              <div style="padding-bottom:20px;">Come see how Oracle is changing the Analytics landscape and driving innovation with autonomous Analytics, Machine Learning, Big Data and Artificial Intelligence. This is a great opportunity to get to know Reston Hubsters, take a deep dive into our solutions and discuss potential business use cases with our team. </div>
+                                                                              <div style="padding-bottom:20px;"> </div>
 
                                                                               <div>Don't wait! Register today - we look forward to seeing you soon! </div>                                                             
                                                                            </td>
@@ -291,7 +291,7 @@
                                           <table width="100%" cellspacing="0" cellpadding="30" class="devicewidthinner" bgcolor="#ffffff" style="border-top-width: 5px; border-top-style: solid; border-top-color: #942645; border-right-width: 1px; border-right-style: solid; border-right-color: #cccccc; border-left-width: 1px; border-left-style: solid; border-left-color: #cccccc;  border-bottom-width: 1px; border-bottom-style: solid; border-bottom-color: #cccccc;">
                                              <tbody>
                                                 <tr>
-                                                   <td valign="top" align="left" style="font-family:Arial, Helvetica, sans-serif; font-size:18px; color:#4e5052;line-height:120%; font-weight:bold; padding-bottom:0;" class="cb-h2"><span class="tmpTitle">We Hope To See You Soon!</span>
+                                                   <td valign="top" align="left" style="font-family:Arial, Helvetica, sans-serif; font-size:18px; color:#4e5052;line-height:120%; font-weight:bold; padding-bottom:0;" class="cb-h2"><span class="tmpTitle"></span>
                                                    </td>
                                                 </tr>
                                                 <tr class="row">
@@ -304,7 +304,7 @@
                                                                   <br />
                                                                   <br />
                                                                   <!--Put email address in href=""-->
-                                                                  <a href="mailto:emily.huegel@oracle.com" class="cb-h3" style="font-family:Arial, Helvetica, sans-serif; color:#00758f;text-decoration:underline;">Please feel free to send us your questions.</a><br />
+                                                                  <a href="https://otube.oracle.com/media/architects+lounge/0_fw4q9m22" class="cb-h3" style="font-family:Arial, Helvetica, sans-serif; color:#00758f;text-decoration:underline;">Please feel free to send us your questions.</a><br />
                                                               
                                                                </td>
                                                             </tr>
