--- a/ECALounge.html
+++ b/ECALounge.html
@@ -254,8 +254,9 @@
 
                                                                               <!--SPACER--><div>&nbsp;</div><!--SPACER-->
 
-                                                                             <!--Put destination URL in href="https://goo.gl/forms/jQoioh13tjDEftnr2"-->
-                                                                              <div class="cb-h3" align="left"><a href="https://goo.gl/forms/jQoioh13tjDEftnr2" class="cb-h3" style="font-family:Arial, Helvetica, sans-serif; color:#00758f;text-decoration:underline;">Register Today</a><br /></div>
+                                                                             <!--Put destination URL in <a href="mailto:Emily.huegel@oracle.com?Subject=Register%20Me%3A%20Oracle%27s%20ECA%20Lounge%20Meet%20Up&Body=Hello%20Emily%2C%20%0A%0AI%20would%20like%20to%20register%20for%20the%20Oracle%20Cloud%20Solution%20Hub%20ECA%20Lounge%20Meet%20Up.%20%0A%0A%5BPlease%20fill%20out%20the%20following%20information%5D%0A%5BName%5D%0A%5BPhone%20Number%5D%0A%5BLine%20of%20Business%5D%0A%5BTitle%5D%0A%5BAreas%20of%20Interest%5D%0A%0AThank%20you%21%0A” target="_-->
+                                                                              <div class="cb-h3" align="left"><a href="mailto:Emily.huegel@oracle.com?Subject=Register%20Me%3A%20Oracle%27s%20ECA%20Lounge%20Meet%20Up&Body=Hello%20Emily%2C%20%0A%0AI%20would%20like%20to%20register%20for%20the%20Oracle%20Cloud%20Solution%20Hub%20ECA%20Lounge%20Meet%20Up.%20%0A%0A%5BPlease%20fill%20out%20the%20following%20information%5D%0A%5BName%5D%0A%5BPhone%20Number%5D%0A%5BLine%20of%20Business%5D%0A%5BTitle%5D%0A%5BAreas%20of%20Interest%5D%0A%0AThank%20you%21%0A” target=
+" class="cb-h3" style="font-family:Arial, Helvetica, sans-serif; color:#00758f;text-decoration:underline;">Register Today</a><br /></div>
 
                                                                            </td>
                                                                         </tr>
@@ -291,7 +292,7 @@
                                           <table width="100%" cellspacing="0" cellpadding="30" class="devicewidthinner" bgcolor="#ffffff" style="border-top-width: 5px; border-top-style: solid; border-top-color: #942645; border-right-width: 1px; border-right-style: solid; border-right-color: #cccccc; border-left-width: 1px; border-left-style: solid; border-left-color: #cccccc;  border-bottom-width: 1px; border-bottom-style: solid; border-bottom-color: #cccccc;">
                                              <tbody>
                                                 <tr>
-                                                   <td valign="top" align="left" style="font-family:Arial, Helvetica, sans-serif; font-size:18px; color:#4e5052;line-height:120%; font-weight:bold; padding-bottom:0;" class="cb-h2"><span class="tmpTitle"></span>
+                                                   <td valign="top" align="left" style="font-family:Arial, Helvetica, sans-serif; font-size:18px; color:#4e5052;line-height:120%; font-weight:bold; padding-bottom:0;" class="cb-h2"><span class="tmpTitle">Want to learn more?</span>
                                                    </td>
                                                 </tr>
                                                 <tr class="row">
@@ -300,11 +301,11 @@
                                                          <tbody>
                                                             <tr>
                                                                <td class="cb-h3 col3-sec" valign="top" align="left" style="font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#4e5052; line-height:130%;">
-                                                                Have questions? Ready to learn more? Please reach out to Hub Program Lead Emily Huegel for additional details related to this event. 
+                                                                Interested in learning more? Click the link below to hear a short message from Hamza Jahangir, Group Vice President of the Cloud Solution Hubs. 
                                                                   <br />
                                                                   <br />
                                                                   <!--Put email address in href=""-->
-                                                                  <a href="https://otube.oracle.com/media/architects+lounge/0_fw4q9m22" class="cb-h3" style="font-family:Arial, Helvetica, sans-serif; color:#00758f;text-decoration:underline;">Please feel free to send us your questions.</a><br />
+                                                                  <a href="https://otube.oracle.com/media/architects+lounge/0_fw4q9m22" class="cb-h3" style="font-family:Arial, Helvetica, sans-serif; color:#00758f;text-decoration:underline;">Watch Now!</a><br />
                                                               
                                                                </td>
                                                             </tr>
