--- a/ECALounge.html
+++ b/ECALounge.html
@@ -246,11 +246,11 @@
 
                                                                               <div style="font-weight:bold; color:#942645; font-size:16px; padding-bottom:5px;">Additional Info</div>
 
-                                                                              <div class="cb-h3" align="left">Demonstrations and Hubster Q&A will take place from 2:30 PM - 5:00 PM a with Happy Hour to follow at Jackson's in Reston Town Center. </div>
+                                                                              <div class="cb-h3" align="left"> The Cloud Solution Hub's dedicated ECA Lounge is located on the 5th floor in room 5222. </div>
 
                                                                               <!--SPACER--><div>&nbsp;</div><!--SPACER-->
 
-                                                                              <div class="cb-h3" align="left"><strong>Phone Number:<br></strong>352.422.0774</div>
+                                                                              <div class="cb-h3" align="left"><strong>For more info contact:<br></strong>Emily Huegel, Reston Program Lead - emily.huegel@oracle.com </div>
 
                                                                               <!--SPACER--><div>&nbsp;</div><!--SPACER-->
 
