--- a/ECALounge.html
+++ b/ECALounge.html
@@ -123,7 +123,7 @@
 
                                            <!--SPACER--><div>&nbsp;</div><!--SPACER-->
 
-                                           <div>You're Invited! Oracle Cloud Solution Hub ECA Lounge</div>
+                                           <div>You're Invited! Oracle Cloud Solution Hub Architect Lounge</div>
 
                                         </td>
                                       </tr>
@@ -193,7 +193,7 @@
                                              <tbody>
                                                 <!--Start Headline-->
                                                 <tr>
-                                                   <td class="cb-h1" align="left" valign="top" style="font-family:Arial, Helvetica, sans-serif; font-size:25px; color:#4e5052;line-height:120%; padding-bottom:20px;">Join Us: ECA Lounge at the Cloud Solution Hub
+                                                   <td class="cb-h1" align="left" valign="top" style="font-family:Arial, Helvetica, sans-serif; font-size:25px; color:#4e5052;line-height:120%; padding-bottom:20px;">Join Us: Architect Lounge at the Cloud Solution Hub
                                        </td>
                                                 </tr>
                                                 <!--End Headline-->
@@ -210,11 +210,10 @@
                                                                         <tr>
                                                                            <td class="cb-h3" align="left" style="font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#4e5052; word-break:break-word; text-align:left; padding-bottom:20px; line-height:140%">
 
-                                                                              <div style="padding-bottom:20px;">The Oracle Cloud Solution Hub would like to invite you to experience our new ECA Lounge. This dedicated space is designed to foster deeper collaboration between our team of Hubsters and ECAs. </div>
+                                                                              <div style="padding-bottom:20px;">The Oracle Cloud Solution Hub would like to invite you to experience our new Architect Lounge. This dedicated space is designed to foster deeper collaboration between Oracle Architects and our team of Hubsters. </div>
 
-                                                                              <div style="padding-bottom:20px;">Please join us for our first collaborative experience event on [DATE TBA]. Guest will have the chance to meet our Hubsters, see live demonstrations of our Hub solutions and share your experiences on what is happening in the field with your customers. </div>
-                                                                              
-                                                                              <div style="padding-bottom:20px;"> </div>
+                                                                              <div style="padding-bottom:20px;">Please join us for our first collaborative experience event on November 20, 2018. Architects and hubsters will have the chance to meet and break bread, you can share what you are seeing in the field & ideas that will make customer engagements richer, and see some live demonstrations the Hubs have built. </div>
+                                                                             
 
                                                                               <div>Don't wait! Register today - we look forward to seeing you soon! </div>                                                             
                                                                            </td>
@@ -230,9 +229,9 @@
 
                                                                               <div style="font-weight:bold; color:#942645; font-size:16px; padding-bottom:5px;">Event Details</div>
 
-                                                                              <div class="cb-h3" align="left"><strong>Date:</strong>&nbsp;Wednesday, November 7, 2018</div>
+                                                                              <div class="cb-h3" align="left"><strong>Date:</strong>&nbsp;Tuesday, November 20, 2018</div>
 
-                                                                              <div class="cb-h3" align="left"><strong>Time:</strong>&nbsp;2:30 PM - 7:00 PM</div>
+                                                                              <div class="cb-h3" align="left"><strong>Time:</strong>&nbsp;11:30 AM - 2:30 PM</div>
 
                                                                               <div class="cb-h3" align="left"><strong>Location:</strong>1910 BLDG, 5th Floor</div>
 
@@ -246,7 +245,7 @@
 
                                                                               <div style="font-weight:bold; color:#942645; font-size:16px; padding-bottom:5px;">Additional Info</div>
 
-                                                                              <div class="cb-h3" align="left"> The Cloud Solution Hub's dedicated ECA Lounge is located on the 5th floor in room 5222. </div>
+                                                                              <div class="cb-h3" align="left"> The Cloud Solution Hub's dedicated Architect Lounge is located on the 5th floor in room 5222. </div>
 
                                                                               <!--SPACER--><div>&nbsp;</div><!--SPACER-->
 
