--- a/ECALounge.html
+++ b/ECALounge.html
@@ -299,14 +299,7 @@
                                                       <table width="100%" cellspacing="0" cellpadding="0" border="0" align="left" class="tx-col2 devicewidthinner" style="font-family:Arial, Helvetica, sans-serif; font-size:14px; color:#4e5052; border:none; mso-table-lspace:0pt; mso-table-rspace:0pt; border-collapse:collapse;">
                                                          <tbody>
                                                             <tr>
-                                                               <td class="cb-h3 col3-sec" valign="top" align="left" style="font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#4e5052; line-height:130%;">
-                                                                Interested in learning more? Click the link below to hear a short message from Hamza Jahangir, Group Vice President of the Cloud Solution Hubs. 
-                                                                  <br />
-                                                                  <br />
-                                                                  <!--Put email address in href=""-->
-                                                                  <a href="https://otube.oracle.com/media/architects+lounge/0_fw4q9m22" class="cb-h3" style="font-family:Arial, Helvetica, sans-serif; color:#00758f;text-decoration:underline;">Watch Now!</a><br />
-                                                              
-                                                               </td>
+                                                               <iframe id="kmsembed-0_fw4q9m22" width="608" height="425" src="https://otube.oracle.com/embed/secure/iframe/entryId/0_fw4q9m22/uiConfId/14969550" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen frameborder="0"></iframe>
                                                             </tr>
                                                          </tbody>
                                                       </table>
